--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,9 @@ scikit-learn>=1.1
 matplotlib>=3.6
 seaborn>=0.12
 jupyterlab>=3.4
+plotly>=5.16
+streamlit>=1.32
 
 # Topological Data Analysis utilities
 scikit-tda>=0.1.3
+networkx>=3.1
