--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ jupyterlab>=3.4
 plotly>=5.16
 streamlit>=1.32
 openpyxl>=3.1
+kaleido>=0.2.1
 
 # Topological Data Analysis utilities
 scikit-tda>=0.1.3
