--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,6 @@ ENV/
 
 # agent files
 AgentContext.md
+
+#Large geo file
+Local_Authority_Districts_December_2021_UK_BGC_2022_4923559779027843470.geojson
